--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: mysql:5.7
     restart: always
     environment:
-      MYSQL_DATABASE: 'localhost'
+      MYSQL_DATABASE: 'db'
       # So you don't have to use root, but you can if you like
       MYSQL_USER: 'user'
       # You can use whatever password you like
@@ -37,3 +37,12 @@ networks:
     driver: bridge
 #volumes:
 # my-db: C:\Users\arche\OneDrive\Bureau\Mysql
+environment:
+      spring.datasource.url: jdbc:mysql://db:3306/timesheetdevops?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+      spring.datasource.username: root
+      spring.datasource.password: root
+      #- DEFAULT_PATH=<Target path in windows>
+    depends_on:
+      - mysql
+      - phpmyadmin
+
